--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Navigation -->
   <nav role="navigation" aria-label="Utama">
     <ul>
-      <li><a href="home.html" aria-current="page">Halaman Utama</a></li>
+      <li><a href="index.html" aria-current="page">Halaman Utama</a></li>
       <li><a href="aktiviti.html">Aktiviti Menarik</a></li>
       <li><a href="pakej.html">Pakej</a></li>
       <li><a href="contact.html">Hubungi</a></li>
@@ -59,3 +59,4 @@
   </footer>
 </body>
 </html>
+
