--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
   <nav role="navigation" aria-label="Utama">
     <ul>
-      <li><a href="home.html">Halaman Utama</a></li>
+      <li><a href="index.html">Halaman Utama</a></li>
       <li><a href="aktiviti.html">Aktiviti Menarik</a></li>
       <li><a href="pakej.html">Pakej</a></li>
       <li><a href="contact.html" aria-current="page">Hubungi</a></li>
@@ -85,3 +85,4 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
