--- a/aktiviti.html
+++ b/aktiviti.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav role="navigation" aria-label="Utama">
     <ul>
-      <li><a href="home.html">Halaman Utama</a></li>
+      <li><a href="index.html">Halaman Utama</a></li>
       <li><a href="aktiviti.html" aria-current="page">Aktiviti Menarik</a></li>
       <li><a href="pakej.html">Pakej</a></li>
       <li><a href="contact.html">Hubungi</a></li>
@@ -117,3 +117,4 @@
   </footer>
 </body>
 </html>
+
