--- a/Pakej.html
+++ b/Pakej.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav role="navigation" aria-label="Utama">
     <ul>
-      <li><a href="home.html">Halaman Utama</a></li>
+      <li><a href="index.html">Halaman Utama</a></li>
       <li><a href="aktiviti.html">Aktiviti Menarik</a></li>
       <li><a href="pakej.html" aria-current="page">Pakej</a></li>
       <li><a href="contact.html">Hubungi</a></li>
@@ -109,3 +109,4 @@
   </footer>
 </body>
 </html>
+
